[package]
name = "samurai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
rust-bert = "0.22.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = {version = "1.38.2", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
